# btClient

./: .gitignore  CMakeLists.txt
cmake/: AddGitSubmodule.cmake
include/: BProtocol.hpp  Network.hpp  Torrent.hpp  Tracker.hpp  debug.hpp  torrent_structure.hpp
src/: BProtocol.cpp  CMakeLists.txt  Network.cpp  Torrent.cpp  Tracker.cpp  torrent_structure.cpp
test/: CMakeLists.txt  test_main.cpp
